some data in notebook 585

--- a/problems/Medium/585.CIrcle_intesections/circles.ipynb
+++ b/problems/Medium/585.CIrcle_intesections/circles.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,6 +165,403 @@
    "source": [
     "with open(\"formulas.txt\", 'w') as file:\n",
     "    file.write(\"\".join(formulas))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ладно, оказывается, существует формула гемотрическая. А поcчитать через метод Монте-Карло и Симпсона не получается:("
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "import random\n",
+    "\n",
+    "SMALL = 1e-10\n",
+    " \n",
+    "class CircleIntersection:\n",
+    "    @staticmethod\n",
+    "    def intersection_area(circles, stats=None):\n",
+    "        # Получаем все точки пересечения кругов\n",
+    "        intersection_points = CircleIntersection.get_intersection_points(circles)\n",
+    "        \n",
+    "        # Фильтруем точки, которые не включены во все круги\n",
+    "        inner_points = [p for p in intersection_points if CircleIntersection.contained_in_circles(p, circles)]\n",
+    " \n",
+    "        arc_area = 0\n",
+    "        polygon_area = 0\n",
+    "        arcs = []\n",
+    " \n",
+    "        # Если у нас есть точки пересечения, которые находятся внутри всех кругов,\n",
+    "        # то вычисляем площадь, содержащуюся в них\n",
+    "        if len(inner_points) > 1:\n",
+    "            # Сортируем точки по углу от центра многоугольника, что позволяет\n",
+    "            # нам просто итерироваться по точкам, чтобы получить рёбра\n",
+    "            center = CircleIntersection.get_center(inner_points)\n",
+    "            for p in inner_points:\n",
+    "                p['angle'] = math.atan2(p['x'] - center['x'], p['y'] - center['y'])\n",
+    "            inner_points.sort(key=lambda a: a['angle'], reverse=True)\n",
+    " \n",
+    "            # Итерируемся по всем точкам, получаем дугу между точками\n",
+    "            # и обновляем площади\n",
+    "            p2 = inner_points[-1]\n",
+    "            for p1 in inner_points:\n",
+    "                # Площадь многоугольника обновляется легко ...\n",
+    "                polygon_area += (p2['x'] + p1['x']) * (p1['y'] - p2['y'])\n",
+    "    \n",
+    "                # Обновление площади дуги немного сложнее\n",
+    "                mid_point = {'x': (p1['x'] + p2['x']) / 2,\n",
+    "                             'y': (p1['y'] + p2['y']) / 2}\n",
+    "                arc = None\n",
+    " \n",
+    "                for j in p1['parent_index']:\n",
+    "                    if j in p2['parent_index']:\n",
+    "                        # Вычисляем угол между двумя точками\n",
+    "                        # на текущем круге\n",
+    "                        circle = circles[j]\n",
+    "                        a1 = math.atan2(p1['x'] - circle['x'], p1['y'] - circle['y'])\n",
+    "                        a2 = math.atan2(p2['x'] - circle['x'], p2['y'] - circle['y'])\n",
+    " \n",
+    "                        angle_diff = (a2 - a1)\n",
+    "                        if angle_diff < 0:\n",
+    "                            angle_diff += 2 * math.pi\n",
+    "                        \n",
+    "                        # И используем этот угол для вычисления ширины\n",
+    "                        # дуги\n",
+    "                        a = a2 - angle_diff / 2\n",
+    "                        width = CircleIntersection.distance(mid_point, {\n",
+    "                            'x': circle['x'] + circle['radius'] * math.sin(a),\n",
+    "                            'y': circle['y'] + circle['radius'] * math.cos(a)\n",
+    "                        })\n",
+    "                        \n",
+    "                        # Выбираем круг, чья дуга имеет наименьшую ширину\n",
+    "                        if arc is None or arc['width'] > width:\n",
+    "                            arc = {'circle': circle,    \n",
+    "                                   'width': width,\n",
+    "                                   'p1': p1,\n",
+    "                                   'p2': p2}\n",
+    "                \n",
+    "                arcs.append(arc)\n",
+    "                arc_area += CircleIntersection.circle_area(arc['circle']['radius'], arc['width'])\n",
+    "                p2 = p1\n",
+    "        else:\n",
+    "            # Нет точек пересечения, либо круги не пересекаются, либо полностью\n",
+    "            # перекрываются. Определяем, что именно, рассматривая наименьший круг\n",
+    "            smallest = min(circles, key=lambda c: c['radius'])\n",
+    "           \n",
+    "            # Убеждаемся, что наименьший круг полностью содержится во всех\n",
+    "            # остальных кругах\n",
+    "            disjoint = any(CircleIntersection.distance(circle, smallest) > abs(smallest['radius'] - circle['radius']) for circle in circles)\n",
+    " \n",
+    "            if disjoint:\n",
+    "                arc_area = polygon_area = 0\n",
+    "            else:\n",
+    "                arc_area = smallest['radius'] ** 2 * math.pi\n",
+    "                arcs.append({\n",
+    "                    'circle': smallest,\n",
+    "                    'p1': {'x': smallest['x'], 'y': smallest['y'] + smallest['radius']},\n",
+    "                    'p2': {'x': smallest['x'] - SMALL, 'y': smallest['y'] + smallest['radius']},\n",
+    "                    'width': smallest['radius'] * 2\n",
+    "                })\n",
+    " \n",
+    "        polygon_area /= 2\n",
+    "        if stats is not None:\n",
+    "            stats['area'] = arc_area + polygon_area\n",
+    "            stats['arc_area'] = arc_area\n",
+    "            stats['polygon_area'] = polygon_area\n",
+    "            stats['arcs'] = arcs\n",
+    "            stats['inner_points'] = inner_points\n",
+    "            stats['intersection_points'] = intersection_points\n",
+    " \n",
+    "        return arc_area + polygon_area\n",
+    " \n",
+    "    @staticmethod\n",
+    "    def monte_carlo_estimate(circles, count=10000):\n",
+    "        contained = 0\n",
+    "        bound = CircleIntersection.get_bounding_rectangle(circles)\n",
+    "        for _ in range(count):\n",
+    "            p = CircleIntersection.random_point(bound)\n",
+    "            if CircleIntersection.contained_in_circles(p, circles):\n",
+    "                contained += 1\n",
+    "        return bound['width'] * bound['height'] * contained / count\n",
+    " \n",
+    "    @staticmethod\n",
+    "    def subdivide_rectangle(current, output):\n",
+    "        w = current['width'] / 2\n",
+    "        h = current['height'] / 2\n",
+    "        level = current.get('level', 0)\n",
+    " \n",
+    "        output({\n",
+    "            'x': current['x'],\n",
+    "            'y': current['y'],\n",
+    "            'width': w,\n",
+    "            'height': h,\n",
+    "            'level': level + 1\n",
+    "        })\n",
+    " \n",
+    "        output({\n",
+    "            'x': current['x'] + w,\n",
+    "            'y': current['y'],\n",
+    "            'width': w,\n",
+    "            'height': h,\n",
+    "            'level': level + 1\n",
+    "        })\n",
+    " \n",
+    "        output({\n",
+    "            'x': current['x'],\n",
+    "            'y': current['y'] + h,\n",
+    "            'width': w,\n",
+    "            'height': h,\n",
+    "            'level': level + 1\n",
+    "        })\n",
+    " \n",
+    "        output({\n",
+    "            'x': current['x'] + w,\n",
+    "            'y': current['y'] + h,\n",
+    "            'width': w,\n",
+    "            'height': h,\n",
+    "            'level': level + 1\n",
+    "        })\n",
+    " \n",
+    "    @staticmethod\n",
+    "    def rectangle_contained(current, circles):\n",
+    "        x, y, w, h = current['x'], current['y'], current['width'], current['height']\n",
+    " \n",
+    "        point_values = [\n",
+    "            CircleIntersection.contained_in_circles({'x': x, 'y': y}, circles),\n",
+    "            CircleIntersection.contained_in_circles({'x': x + w, 'y': y}, circles),\n",
+    "            CircleIntersection.contained_in_circles({'x': x, 'y': y + h}, circles),\n",
+    "            CircleIntersection.contained_in_circles({'x': x + w, 'y': y + h}, circles)\n",
+    "        ]\n",
+    " \n",
+    "        if all(v == point_values[0] for v in point_values):\n",
+    "            return 1 if point_values[0] else -1\n",
+    "        return 0\n",
+    " \n",
+    "    @staticmethod\n",
+    "    def quadtree_estimate(circles, depth=8):\n",
+    "        bound = CircleIntersection.get_bounding_rectangle(circles)\n",
+    "        area = 0\n",
+    "        outside_area = 0\n",
+    " \n",
+    "        if bound['width'] <= 0 or bound['height'] <= 0:\n",
+    "            return [0, 0]\n",
+    " \n",
+    "        def examine_rectangle(r):\n",
+    "            nonlocal area, outside_area\n",
+    "            in_or_out = CircleIntersection.rectangle_contained(r, circles)\n",
+    "            if in_or_out == 0:\n",
+    "                if r['level'] <= depth:\n",
+    "                    CircleIntersection.subdivide_rectangle(r, examine_rectangle)\n",
+    "            elif in_or_out > 0:\n",
+    "                area += r['width'] * r['height']\n",
+    "            else:\n",
+    "                outside_area += r['width'] * r['height']\n",
+    " \n",
+    "        bound['level'] = 0\n",
+    "        CircleIntersection.subdivide_rectangle(bound, examine_rectangle)\n",
+    " \n",
+    "        uncertain = (bound['width'] * bound['height'] - area - outside_area) / 2\n",
+    "        return [area + uncertain, uncertain]\n",
+    " \n",
+    "    @staticmethod\n",
+    "    def contained_in_circles(point, circles):\n",
+    "        return all(CircleIntersection.distance(point, circle) <= circle['radius'] + SMALL for circle in circles)\n",
+    " \n",
+    "    @staticmethod\n",
+    "    def get_intersection_points(circles):\n",
+    "        ret = []\n",
+    "        for i in range(len(circles)):\n",
+    "            for j in range(i + 1, len(circles)):\n",
+    "                intersect = CircleIntersection.circle_circle_intersection(circles[i], circles[j])\n",
+    "                for p in intersect:\n",
+    "                    p['parent_index'] = [i, j]\n",
+    "                    ret.append(p)\n",
+    "        return ret\n",
+    " \n",
+    "    @staticmethod\n",
+    "    def circle_integral(r, x):\n",
+    "        y = math.sqrt(r * r - x * x)\n",
+    "        return x * y + r * r * math.atan2(x, y)\n",
+    " \n",
+    "    @staticmethod\n",
+    "    def circle_area(r, width):\n",
+    "        return CircleIntersection.circle_integral(r, width - r) - CircleIntersection.circle_integral(r, -r)\n",
+    " \n",
+    "    @staticmethod\n",
+    "    def distance(p1, p2):\n",
+    "        return math.sqrt((p1['x'] - p2['x']) ** 2 + (p1['y'] - p2['y']) ** 2)\n",
+    " \n",
+    "    @staticmethod\n",
+    "    def circle_overlap(r1, r2, d):\n",
+    "        if d >= r1 + r2:\n",
+    "            return 0\n",
+    "        if d <= abs(r1 - r2):\n",
+    "            return math.pi * min(r1, r2) ** 2\n",
+    " \n",
+    "        w1 = r1 - (d * d - r2 * r2 + r1 * r1) / (2 * d)\n",
+    "        w2 = r2 - (d * d - r1 * r1 + r2 * r2) / (2 * d)\n",
+    "        return CircleIntersection.circle_area(r1, w1) + CircleIntersection.circle_area(r2, w2)\n",
+    " \n",
+    "    @staticmethod\n",
+    "    def circle_circle_intersection(p1, p2):\n",
+    "        d = CircleIntersection.distance(p1, p2)\n",
+    "        r1, r2 = p1['radius'], p2['radius']\n",
+    " \n",
+    "        if d >= (r1 + r2) or d <= abs(r1 - r2):\n",
+    "            return []\n",
+    " \n",
+    "        a = (r1 * r1 - r2 * r2 + d * d) / (2 * d)\n",
+    "        h = math.sqrt(r1 * r1 - a * a)\n",
+    "        x0 = p1['x'] + a * (p2['x'] - p1['x']) / d\n",
+    "        y0 = p1['y'] + a * (p2['y'] - p1['y']) / d\n",
+    "        rx = -(p2['y'] - p1['y']) * (h / d)\n",
+    "        ry = -(p2['x'] - p1['x']) * (h / d)\n",
+    " \n",
+    "        return [{'x': x0 + rx, 'y': y0 - ry},\n",
+    "                {'x': x0 - rx, 'y': y0 + ry}]\n",
+    " \n",
+    "    @staticmethod\n",
+    "    def get_center(points):\n",
+    "        x_sum = sum(p['x'] for p in points)\n",
+    "        y_sum = sum(p['y'] for p in points)\n",
+    "        n = len(points)\n",
+    "        return {'x': x_sum / n, 'y': y_sum / n}\n",
+    " \n",
+    "    @staticmethod\n",
+    "    def random_point(rect):\n",
+    "        return {\n",
+    "            'x': rect['x'] + random.random() * rect['width'],\n",
+    "            'y': rect['y'] + random.random() * rect['height']\n",
+    "        }\n",
+    " \n",
+    "    @staticmethod\n",
+    "    def get_bounding_rectangle(circles):\n",
+    "        def contained(p):\n",
+    "            return CircleIntersection.contained_in_circles(p, circles)\n",
+    "        \n",
+    "        intersection_points = CircleIntersection.get_intersection_points(circles)\n",
+    "        inner = [p for p in intersection_points if contained(p)]\n",
+    " \n",
+    "        x1 = min(p['x'] for p in inner)\n",
+    "        y1 = min(p['y'] for p in inner)\n",
+    "        x2 = max(p['x'] for p in inner)\n",
+    "        y2 = max(p['y'] for p in inner)\n",
+    "        \n",
+    "        for p in circles:\n",
+    "            if p['x'] - p['radius'] < x1 and contained({'x': p['x'] - p['radius'], 'y': p['y']}):\n",
+    "                x1 = p['x'] - p['radius']\n",
+    "            if p['x'] + p['radius'] > x2 and contained({'x': p['x'] + p['radius'], 'y': p['y']}):\n",
+    "                x2 = p['x'] + p['radius']\n",
+    "            if p['y'] - p['radius'] < y1 and contained({'y': p['y'] - p['radius'], 'x': p['x']}):\n",
+    "                y1 = p['y'] - p['radius']\n",
+    "            if p['y'] + p['radius'] > y2 and contained({'y': p['y'] + p['radius'], 'x': p['x']}):\n",
+    "                y2 = p['y'] + p['radius']\n",
+    " \n",
+    "        return {'x': x1, 'y': y1, 'height': y2 - y1, 'width': x2 - x1}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "circle_inter = CircleIntersection()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7.599910406248188\n",
+      "2.283581888270023\n",
+      "11.91671462250941\n",
+      "33.23728479482561\n",
+      "1.0244688699326163\n",
+      "7.110241055015436\n",
+      "3.1108912271665807\n",
+      "50.1504907514003\n",
+      "84.55469533048482\n",
+      "2.1952276949375893\n",
+      "9.669890280550579\n",
+      "7.042141843262949\n",
+      "6.095725016648663\n",
+      "0.0638066607544141\n",
+      "85.60962089657973\n",
+      "3.1108912271665803\n",
+      "6.144161442556175\n",
+      "4.884532805197744\n",
+      "28.38333390443564\n",
+      "1.4355081012287076\n",
+      "8.792763529616966\n",
+      "31.53629001930843\n",
+      "17.095276906156993\n",
+      "12.348238566988629\n",
+      "1.1742546238671947\n",
+      "6.358946853031036\n",
+      "12.641955539600247\n",
+      "6.994850842466896\n",
+      "4.1154164963941895\n",
+      "2.741262265453754\n",
+      "1.117452402500108\n",
+      "1.698369505005481\n",
+      "28.200897103873363\n",
+      "8.956791353093273\n",
+      "30.13021804069568\n",
+      "34.77025582777166\n",
+      "21.434979375458653\n",
+      "11.394580159657146\n",
+      "3.141592653589793\n",
+      "73.00325350588139\n",
+      "2.372814890331462\n",
+      "25.075653680153493\n",
+      "103.25524745813692\n",
+      "64.75022260750039\n",
+      "2.737168430966207\n",
+      "12.620542337470582\n",
+      "13.44978400746355\n",
+      "1.272619670047991\n",
+      "38.51411804113347\n",
+      "18.315279736359596\n"
+     ]
+    }
+   ],
+   "source": [
+    "for tripl in tripls:\n",
+    "    tripl = [dict(zip(['x', 'y', 'radius'], tripl[i])) for i in range(3)]\n",
+    "    print(circle_inter.intersection_area(tripl))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(2, 2, 6), (1, 1, 6), (9, 2, 4)]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tripls[0]"
    ]
   },
   {
